fix swagger doc registration
