# services/auth/src/routes/auth.ts
@@ -81,6 +81,7 @@ export function AuthRoutesInit(app: Express, authService: AuthService) {
      *             required:
      *               - name
      *               - email
+     *               - role
      *               - password
      *             properties:
      *               name:
@@ -97,6 +98,11 @@ export function AuthRoutesInit(app: Express, authService: AuthService) {
      *                 format: password
      *                 description: Password for the user
      *                 example: mySecurePassword
+     *               role:
+     *                 type: number
+     *                 enum: [0, 1, 2]
+     *                 description: User role (0=STUDENT, 1=ADMIN, 2=LECTURER)
+     *                 example: 0
      *     responses:
      *       201:
      *         description: User successfully registered
